# UDP-Game

./: .gitignore  README.md  todo
client/: client.cpp
concepts/: .gitignore  exceptions.go  go.mod
concepts/bitshifting/: bitwise.c  char_to_int.c  main.c
concepts/database/: db.go  go.mod  models.go
concepts/handshakes/: client.go  server.go
concepts/perlin_noise/: go.mod  main.go
concepts/send_binary_data/: CMakeLists.txt  block.cpp  block.h  chunk.cpp  chunk.h  test_block.cpp  test_chunk.cpp  test_client.cpp  test_server.go
concepts/server/: tcp-zmq-server.go  udp-net-client.go
server/: client.go  go.mod  main.go  tcp-zmq-client.go  tcp-zmq-server.go  udp-net-server.go  zmq.go
src/client/: .gitignore  CMakeLists.txt  main.cpp
src/client/globvars/: globvars.cpp  globvars.h  globvars.json
src/client/models/block/: Block.cpp  Block.h  BlockSprite.cpp  BlockSprite.h
src/client/models/chunk/: Chunk.cpp  Chunk.h
src/client/models/particle/: Particle.cpp  Particle.h  ParticleStream.cpp  ParticleStream.h
src/client/models/player/: player.cpp  player.h
src/client/models/tests/: block_chunk_test.cpp  particle_test.cpp  test.cpp
src/client/net/: CMakeLists.txt  requests.cpp  requests.h
src/client/net/calls/: calls.cpp  calls.h
src/client/net/calls/tests/: test.cpp
src/client/net/core/: CMakeLists.txt  core.cpp  core.h
src/client/net/macros/: macros.cpp  macros.h
src/client/net/parser/: parser.cpp  parser.h
src/client/net/parser/tests/: parser_tests.cpp
src/client/net/requests/: requests.cpp  requests.h
src/client/tests/: chunk_rendering.cpp  sfml-test.cpp  test-client.cpp  test-requests.cpp
src/client/tests/noise_gen/: noise_gen.cpp
src/server/: game-server.go  go.mod  go.sum  main.go  player-server.go
src/server/addys/: addys.go
src/server/conf/: config.json  load_config.go
src/server/config/: config.json  load_config.go
src/server/db/: conn.go
src/server/db/models/blocks/: Block.go
src/server/db/models/chunks/: Chunk.go  chunk_files.go
src/server/db/models/players/: Player.go
src/server/err_handling/: error_handling.go
src/server/error_handling/: error_handling.go
src/server/globvars/: gv.go
src/server/json_utils/: json.go
src/server/models/chunks/: chunks.go
src/server/models/players/: players.go
src/server/routes/: request_structs.go  routes.go
src/server/routes/route_structs/: request_structs.go  structs.go
src/server/sessions/: sessions.go
src/server/tests/: chunkTests.go  db.go  noise.go  synack-client.go  udp-net-client.go
src/server/tests/clients/: login-n-listen.go  performance.go  test-client.go
src/server/tests/clients/methods/: methods.go
src/server/utils/json_utils/: json.go
src/server/utils/net_utils/: net_utils.go
src/server/utils/slice_utils/: slice.go
